--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,10 @@
   "type": "package",
   "require": {
     "php": ">=7.4 | >=8.0",
-    "escolalms/auth": ">=0.0",
     "escolalms/cart": ">=0.0",
-    "escolalms/categories": ">=0.1",
-    "escolalms/core": ">=0.1.6",
+    "escolalms/core": "^1.2",
     "escolalms/courses": ">=0.0",
     "laravel/framework": ">=8.0",
-    "laravel/socialite": "v5.1.3",
     "maatwebsite/excel": "^3.1"
   },
   "require-dev": {
