--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,19 @@
   "type": "package",
   "require": {
     "php": ">=7.4 | >=8.0",
-    "escolalms/cart": ">=0.0",
     "escolalms/core": "^1.2",
-    "escolalms/courses": ">=0.0",
     "laravel/framework": ">=8.0",
     "maatwebsite/excel": "^3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "orchestra/testbench": ">=5.0"
+    "orchestra/testbench": ">=5.0",
+    "escolalms/courses": ">=0.0",
+    "escolalms/cart": ">=0.0"
+  },
+  "suggest": {
+    "escolalms/courses": "Required for reports about Courses",
+    "escolalms/cart": "Required for reports about Cart/Payments/etc"
   },
   "license": "MIT",
   "authors": [
