--- a/env/codecov/testbench.yaml
+++ b/env/codecov/testbench.yaml
@@ -10,6 +10,8 @@ providers:
   - Spatie\Permission\PermissionServiceProvider
   - Laravel\Passport\PassportServiceProvider
   - EscolaLms\Categories\EscolaLmsCategoriesServiceProvider
-  - EscolaLms\Courses\EscolaLmsCourseServiceProvider
   - EscolaLms\Core\EscolaLmsServiceProvider
   - EscolaLms\Auth\EscolaLmsAuthServiceProvider
+  - EscolaLms\Payments\Providers\PaymentsServiceProvider
+  - EscolaLms\Courses\EscolaLmsCourseServiceProvider
+  - EscolaLms\Cart\EscolaLmsCartServiceProvider
