--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,16 @@
   "description": "Escola Headless LMS Reports",
   "type": "package",
   "require": {
-    "php": ">=7.4 | >=8.0",
+    "php": "^7.4|^8.0",
     "escolalms/core": "^1.2",
-    "laravel/framework": ">=8.0",
+    "laravel/framework": "^8.0|^9.0",
     "maatwebsite/excel": "^3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "orchestra/testbench": ">=5.0",
-    "escolalms/courses": ">=0.0",
-    "escolalms/cart": "0.1.19"
+    "orchestra/testbench": "^6.0|^7.0",
+    "escolalms/courses": "^0.3",
+    "escolalms/cart": "^0.3.2"
   },
   "suggest": {
     "escolalms/courses": "Required for reports about Courses",
