--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "phpunit/phpunit": "^9.0",
     "orchestra/testbench": "^6.0|^7.0",
     "escolalms/courses": "^0.3",
-    "escolalms/cart": "^0.4"
+    "escolalms/cart": "^0.4",
+    "escolalms/questionnaire": "^0"
   },
   "suggest": {
     "escolalms/courses": "Required for reports about Courses",
