--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "orchestra/testbench": "^6.0|^7.0",
     "escolalms/courses": "^0.3",
     "escolalms/cart": "^0.4",
-    "escolalms/questionnaire": "^0"
+    "escolalms/questionnaire": "^0",
+    "escolalms/notifications": "^0"
   },
   "suggest": {
     "escolalms/courses": "Required for reports about Courses",
