--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         run: cp env/mysql/* .
 
       - name: Update composer
-        run: composer update
+        run: COMPOSER_ROOT_VERSION=0.9.9 composer update
 
       - name: Clear config
         run: vendor/bin/testbench config:clear
@@ -71,7 +71,7 @@ jobs:
         run: cp env/mysql/* .
 
       - name: Update composer
-        run: composer update
+        run: COMPOSER_ROOT_VERSION=0.9.9 composer update
 
       - name: Clear config
         run: vendor/bin/testbench config:clear
@@ -103,7 +103,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Update composer
-        run: composer update
+        run: COMPOSER_ROOT_VERSION=0.9.9 composer update
 
       - name: Setup environment
         run: cp env/postgres/* .
@@ -147,7 +147,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Update composer
-        run: composer update
+        run: COMPOSER_ROOT_VERSION=0.9.9 composer update
 
       - name: Setup environment
         run: cp env/postgres/* .
