--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.0",
     "orchestra/testbench": "^6.0|^7.0",
+    "escolalms/auth": "^0",
     "escolalms/courses": "^0.3",
     "escolalms/cart": "^0.4",
     "escolalms/questionnaire": "^0",
