--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,11 @@
   "config": {
     "optimize-autoloader": false,
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true,
+      "php-http/discovery": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true
