--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "phpunit/phpunit": "^9.0",
     "orchestra/testbench": "^6.0|^7.0",
     "escolalms/auth": "^0",
-    "escolalms/courses": "^0.4.13",
+    "escolalms/courses": "^0.4",
+    "escolalms/topic-types": "^0.2",
     "escolalms/cart": "^0.4",
     "escolalms/questionnaire": "^0",
     "escolalms/notifications": "^0"
