--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,19 @@
     "maatwebsite/excel": "^3.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
-    "orchestra/testbench": "^6.0|^7.0",
     "escolalms/auth": "^0",
-    "escolalms/courses": "^0.4",
-    "escolalms/topic-types": "^0.2",
     "escolalms/cart": "^0.4",
+    "escolalms/courses": "^0.4.13",
+    "escolalms/notifications": "^0",
     "escolalms/questionnaire": "^0",
-    "escolalms/notifications": "^0"
+    "escolalms/topic-type-gift": "^0.0.9",
+    "orchestra/testbench": "^6.0|^7.0",
+    "phpunit/phpunit": "^9.0"
   },
   "suggest": {
     "escolalms/courses": "Required for reports about Courses",
-    "escolalms/cart": "Required for reports about Cart/Payments/etc"
+    "escolalms/cart": "Required for reports about Cart/Payments/etc",
+    "escolalms/topic-type-gift": "Required for reports about Gift/Quiz Topic Type"
   },
   "license": "MIT",
   "authors": [
