--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "description": "Escola Headless LMS Reports",
   "type": "package",
   "require": {
-    "php": "^7.4|^8.0",
+    "php": ">=7.4",
     "escolalms/core": "^1.2",
-    "laravel/framework": "^8.0|^9.0",
+    "laravel/framework": ">=8.0",
     "maatwebsite/excel": "^3.1"
   },
   "require-dev": {
