--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     "escolalms/notifications": "^0",
     "escolalms/questionnaire": "^0",
     "escolalms/topic-type-gift": "^0.0.9",
-    "orchestra/testbench": "^6.0|^7.0",
-    "phpunit/phpunit": "^9.0"
+    "orchestra/testbench": ">=6.0",
+    "phpunit/phpunit": "^9.0",
+    "nunomaduro/larastan": "^2.0"
   },
   "suggest": {
     "escolalms/courses": "Required for reports about Courses",
